Fix secrets typo

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - run: docker pull alpine
 
-    - run: docker login https://docker.pkg.github.com -u token --password-stdin <<< ${{ secrest.GITHUB_TOKEN }}
+    - run: docker login https://docker.pkg.github.com -u token --password-stdin <<< ${{ secrets.GITHUB_TOKEN }}
 
     - run: docker tag alpine:latest docker.pkg.github.com/${{ github.repository }}/${{ env.IMAGE_NAME }}:0.1
     - run: docker tag alpine:latest docker.pkg.github.com/${{ github.repository }}/${{ env.IMAGE_NAME }}:0.2
@@ -27,4 +27,4 @@ jobs:
         package-name: ${{ env.IMAGE_NAME }}
         num-old-versions-to-delete: 1
 
-    - run: docker run jcansdale/gpr files ${{ github.repository }} -k ${{ secrest.GITHUB_TOKEN }}
+    - run: docker run jcansdale/gpr files ${{ github.repository }} -k ${{ secrets.GITHUB_TOKEN }}
